--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,228 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.logoContainer{
+	display: inline;
+	float: right;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.mainContainer{
+	margin-left:70px;
+	margin-right:70px;
+}
+
+/* START - CSS for positioning the slogan and start button     */
+.slogan{
+	text-align: center;
+	font-size: 60px;
+	margin-top: 100px;
+}
+
+.sloganFine{
+	width: 200px;
+	padding-left: 100px;
+	padding-top: 20px;
+}
+
+.startbutton{
+	width: 150px;
+	height: 20px;
+	margin-left: 40px;
+	display: block;
+	box-sizing: border-box;
+}
+/* END - CSS for positioning the slogan and start button */
+
+.logo-right{
+	margin-top: 20px;
+	margin-left: 100px;
+	background-image: url("../img/header-img.png");
+  	background-repeat: no-repeat;
+  	background-position: right top;
+  	
+    
+    width: 379px;
+    height: 379px;
+}
+
+.circle {
+
+	border-radius: 50%;
+
+	display: inline-block;
+
+	margin-right: 20px;
+
+}
+
+/* START - Top Nav CSS */
+
+
+nav.main-nav {
+    background-image: -o-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: -moz-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: -webkit-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: -ms-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: linear-gradient(to bottom, #637694 0%, #C5CFE0 100%);
+    height:60px;
+    z-index:2;
+	margin-left: 0px;
+    border-bottom:1px solid #dadada;
+    width:100%;
+    position:fixed;
+    top:0px;
+    left:0;
+    right:0;
+    text-align: center;
+}
+
+.topnav {
+	
+	color: black;
+	
+}
+  
+.topnav a {
+display: inline-block;
+color: black;
+text-align: center;
+text-decoration: none;
+font-size: 17px;
+}
+
+.topnav a:hover {
+
+color: black;
+}
+
+.topnav a.active {
+
+color: white;
+}
+
+.navItem{
+	padding-bottom: 20px;
+	margin: 30px;
+	margin-top: 10px;
+
+	display: inline-block;
+}
+/* END - Top Nav CSS */
+
+
+.topSection{
+	padding-top: 60px;
+}
+
+
+hr{
+	border: 1px solid black;
+}
+
+.midSection{
+	width: 100%;
+	height: 100%;
+}
+
+.topSectionLeft{
+	width: 49%;
+	padding-top:10px;
+	padding-bottom: 15px;
+	padding-right: 10px;
+	
+	display: inline-block;
+	
+}
+
+.topSectionRight{
+	width: 50%;
+	padding-top:10px;
+	padding-bottom: 15px;
+	padding-left: 10px;
+	display: inline-block;
+	
+}
+
+
+.botSectionLeft{
+	width: 33%;
+	padding-top:10px;
+	padding-bottom: 15px;
+	
+	display: inline-block;
+}
+.botSectionCenter{
+	width: 33%;
+	padding-top:10px;
+	padding-left:10px;
+	padding-right:10px;
+	padding-bottom: 15px;
+	margin: auto;
+	display: inline-block;
+}
+.botSectionRight{
+	width: 33%;
+	padding-top:10px;
+	padding-bottom: 15px;
+	display: inline-block;
+}
+
+.testLeft{
+	width: 50%;
+	display: inline-block;
+}
+
+.img-center{
+
+	background-image: url("../img/mid-page-accent.jpg");
+  	background-repeat: no-repeat;
+  	background-position: center;
+  	
+	display: inline-block;
+    width: 100%;
+    height: 182px;
+	 
+}
+
+
+
+.bottomSpace{
+	height: 800px;
+}
+
+
+
+
+.spaceHolder{
+	padding: 30px;
+	padding-bottom: 100px;
+	height: 167px;
+}
+
+.blockText{
+	margin-left: auto;
+	margin-right: auto;
+	width: 4em;
+	text-align: center;
+}
+
+.topRightLogo{
+	background-image: url("../img/logo.png");
+  	background-repeat: no-repeat;
+  	background-position: center;
+  	z-index: 20;
+	
+    width: 183px;
+	height: 36px;
+	
+	display: inline-block;
+}
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.5); }
