--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -65,20 +65,180 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
-.logoContainer{
-	display: inline;
-	float: right;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
-}
+
 
 .mainContainer{
 	margin-left:70px;
 	margin-right:70px;
+	border: solid blue 1px;
 }
+
+/* START - Top Nav CSS */
+
+.wrapper nav{
+	width: 100%;
+	position: fixed;
+	color: black;
+
+  }
+
+  /* menu base styles */
+  
+  nav{
+	background-image: -o-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: -moz-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: -webkit-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: -ms-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
+	background-image: linear-gradient(to bottom, #637694 0%, #C5CFE0 100%);
+	
+	display: flex;
+	flex-flow: row wrap;
+	align-items: center;
+	justify-content: space-around;
+	flex-grow: 1;
+  }
+  
+  nav ul{
+	justify-content: space-around;
+	flex-wrap: wrap;
+	list-style-type: none;
+	padding: 0;
+  }
+  
+  nav a{
+	text-decoration: none;
+	text-align: center;
+	color: black;
+	display: block;
+	padding: 10px;
+  }
+  
+  nav a:hover{
+
+  }
+
+  button{
+	all: unset;
+	
+	
+  }
+
+  .buttonRD{
+	margin: 0 auto;
+	/* doesn't work = align-content: center;*/
+	margin-left: 50px;
+	
+	}
+	
+	.topnavRD_closed{
+		display: none;
+	}
+
+/* flex styles */
+
+@media screen and (max-width: 768px){
+	nav ul{
+	
+		
+	}
+
+	nav li{
+		
+	}
+
+	nav{
+		justify-content: center;
+		
+	}
+
+	.topRightLogo{
+		display: flex;
+	}
+	.topnav{
+		display: none;
+	}
+
+	.topnavRD_open{
+		display: none;
+	}
+
+	.topnavRD_closed{
+		display: flex;
+	}
+	
+}
+@media screen and (min-width: 768px){
+	nav ul{
+		display: flex;
+		justify-content: space-around;
+		
+	}
+
+	nav li{
+		/*flex: 1 1 0;*/
+		height: 100%;
+		flex: 0 0 100px;
+	}
+
+	nav{
+		
+	}
+
+	.topRightLogo{
+		display: flex;
+	}
+
+	.topnavRD_open{
+		display: none;
+	}
+
+	
+}
+
+.topnav{
+	
+}
+
+.topnav a {
+	color: black;
+	text-align: center;
+	text-decoration: none;
+	font-size: 17px;
+	margin-top: 10px;
+}
+
+.topnav a:hover {
+	color: black;
+}
+
+.topnav a.active {
+	color: white;
+}
+
+.navItem{
+	padding-bottom: 20px;
+	margin: 0 30px 0 30px;
+}
+
+.topRightLogo{
+	background-image: url("../img/logo.png");
+  	background-repeat: no-repeat;
+  	background-position: center;
+  	z-index: 20;
+	
+    width: 183px;
+	height: 36px;
+	flex: 1 1 0;
+	margin: 0;
+	
+	
+}
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.5); }
+
+/* END - Top Nav CSS */
+
 
 /* START - CSS for positioning the slogan and start button     */
 .slogan{
@@ -102,91 +262,32 @@ h1, h2, h3, h4, h5 {
 }
 /* END - CSS for positioning the slogan and start button */
 
+/* START - css for positioning the circle logo */
 .logo-right{
 	margin-top: 20px;
 	margin-left: 100px;
 	background-image: url("../img/header-img.png");
   	background-repeat: no-repeat;
   	background-position: right top;
-  	
-    
     width: 379px;
     height: 379px;
 }
 
 .circle {
-
 	border-radius: 50%;
-
 	display: inline-block;
-
 	margin-right: 20px;
-
 }
-
-/* START - Top Nav CSS */
-
-
-nav.main-nav {
-    background-image: -o-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
-	background-image: -moz-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
-	background-image: -webkit-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
-	background-image: -ms-linear-gradient(bottom, #637694 0%, #C5CFE0 100%);
-	background-image: linear-gradient(to bottom, #637694 0%, #C5CFE0 100%);
-    height:60px;
-    z-index:2;
-	margin-left: 0px;
-    border-bottom:1px solid #dadada;
-    width:100%;
-    position:fixed;
-    top:0px;
-    left:0;
-    right:0;
-    text-align: center;
-}
-
-.topnav {
-	
-	color: black;
-	
-}
-  
-.topnav a {
-display: inline-block;
-color: black;
-text-align: center;
-text-decoration: none;
-font-size: 17px;
-}
-
-.topnav a:hover {
-
-color: black;
-}
-
-.topnav a.active {
-
-color: white;
-}
-
-.navItem{
-	padding-bottom: 20px;
-	margin: 30px;
-	margin-top: 10px;
-
-	display: inline-block;
-}
-/* END - Top Nav CSS */
+/* END - css for positioning the circle logo */
 
 
 .topSection{
 	padding-top: 60px;
 }
 
-
 hr{
 	border: 1px solid black;
-}
+} 
 
 .midSection{
 	width: 100%;
@@ -197,10 +298,8 @@ hr{
 	width: 49%;
 	padding-top:10px;
 	padding-bottom: 15px;
-	padding-right: 10px;
-	
-	display: inline-block;
-	
+	padding-right: 10px;	
+	display: inline-block;	
 }
 
 .topSectionRight{
@@ -208,16 +307,13 @@ hr{
 	padding-top:10px;
 	padding-bottom: 15px;
 	padding-left: 10px;
-	display: inline-block;
-	
+	display: inline-block;	
 }
-
 
 .botSectionLeft{
 	width: 33%;
 	padding-top:10px;
 	padding-bottom: 15px;
-	
 	display: inline-block;
 }
 .botSectionCenter{
@@ -242,25 +338,17 @@ hr{
 }
 
 .img-center{
-
 	background-image: url("../img/mid-page-accent.jpg");
   	background-repeat: no-repeat;
-  	background-position: center;
-  	
+  	background-position: center;	
 	display: inline-block;
     width: 100%;
-    height: 182px;
-	 
+    height: 182px; 
 }
-
-
 
 .bottomSpace{
 	height: 800px;
 }
-
-
-
 
 .spaceHolder{
 	padding: 30px;
@@ -275,17 +363,3 @@ hr{
 	text-align: center;
 }
 
-.topRightLogo{
-	background-image: url("../img/logo.png");
-  	background-repeat: no-repeat;
-  	background-position: center;
-  	z-index: 20;
-	
-    width: 183px;
-	height: 36px;
-	
-	display: inline-block;
-}
-
-.grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.5); }
