--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -117,7 +117,7 @@ h1, h2, h3, h4, h5 {
 
   }
 
-  button{
+  .buttonRD button{
 	all: unset;
 	
 	
@@ -131,21 +131,11 @@ h1, h2, h3, h4, h5 {
 	}
 	
 	.topnavRD_closed{
-		display: none;
+		display: flex;
 	}
 
-/* flex styles */
-
+/* START - media queries */
 @media screen and (max-width: 768px){
-	nav ul{
-	
-		
-	}
-
-	nav li{
-		
-	}
-
 	nav{
 		justify-content: center;
 		
@@ -162,10 +152,6 @@ h1, h2, h3, h4, h5 {
 		display: none;
 	}
 
-	.topnavRD_closed{
-		display: flex;
-	}
-	
 }
 @media screen and (min-width: 768px){
 	nav ul{
@@ -192,8 +178,75 @@ h1, h2, h3, h4, h5 {
 		display: none;
 	}
 
+	.topnavRD_closed{
+		display: none;
+	}
 	
 }
+
+@media screen and (max-width: 944px){
+	.topSection{
+		display: flex;
+		border: 1px solid red;
+		flex-direction: column;	
+	}
+	.slogan{
+		border: 1px solid black;
+		justify-content: center;
+		flex: 1 0 auto;
+		width: 100%;
+		margin-top: 200px;
+		min-width: 256px;
+	}
+	.logo-right{
+		border: 1px solid black;
+		flex: 1 0 auto;
+		width: 397px;
+		justify-content: center;
+		min-width: 382px;
+	}
+	.circle{
+		margin-left: 0px;
+	}
+
+	.midSection{
+		flex-direction: column;
+	}
+	.topSectionLeft{
+		align-self: center;
+		justify-self: center;
+		margin: 0 auto;
+		padding: 0;
+	}
+
+	.topSectionRight{
+		align-self: center;
+		justify-self: center;
+
+	}
+
+	.botMainSection{
+		display: flexbox;
+		flex-direction: column;
+	}
+
+	.botSectionLeft{
+		align-self: center;
+		border: 1px solid black;
+	}
+
+	.botSectionCenter{
+		margin: auto;
+		border: 1px solid black;
+	}
+
+	.botSectionRight{
+		align-self: center;
+		border: 1px solid black;
+	}
+
+}
+/* END - media queries */
 
 .topnav{
 	
@@ -229,7 +282,7 @@ h1, h2, h3, h4, h5 {
     width: 183px;
 	height: 36px;
 	flex: 1 1 0;
-	margin: 0;
+	justify-content: space-evenly;
 	
 	
 }
@@ -241,49 +294,66 @@ h1, h2, h3, h4, h5 {
 
 
 /* START - CSS for positioning the slogan and start button     */
+.topSection{
+	padding-top: 60px;
+	margin-left: 0px;
+	display: flex;
+	
+}
+
 .slogan{
 	text-align: center;
 	font-size: 60px;
 	margin-top: 100px;
+	margin: auto;
+	width: 175px;
+	flex:1;
 }
 
 .sloganFine{
-	width: 200px;
-	padding-left: 100px;
+	
+	padding-left: 0px;
 	padding-top: 20px;
+	
 }
 
 .startbutton{
 	width: 150px;
 	height: 20px;
-	margin-left: 40px;
-	display: block;
+	margin-left: 0px;
 	box-sizing: border-box;
+}
+
+.blockText{
+	margin-left: auto;
+	margin-right: auto;
+	width: 4em;
+	text-align: center;
 }
 /* END - CSS for positioning the slogan and start button */
 
 /* START - css for positioning the circle logo */
 .logo-right{
-	margin-top: 20px;
-	margin-left: 100px;
+	margin-top: 40px;
+
 	background-image: url("../img/header-img.png");
-  	background-repeat: no-repeat;
-  	background-position: right top;
-    width: 379px;
-    height: 379px;
+	background-repeat: no-repeat;
+	background-position: right top;
+	width: 379px;
+	height: 379px;
+  
+	margin: auto;
 }
 
 .circle {
-	border-radius: 50%;
-	display: inline-block;
-	margin-right: 20px;
+	border-radius: 50px;
+	
+	
 }
 /* END - css for positioning the circle logo */
 
 
-.topSection{
-	padding-top: 60px;
-}
+
 
 hr{
 	border: 1px solid black;
@@ -292,6 +362,7 @@ hr{
 .midSection{
 	width: 100%;
 	height: 100%;
+	display: flex;
 }
 
 .topSectionLeft{
@@ -299,7 +370,7 @@ hr{
 	padding-top:10px;
 	padding-bottom: 15px;
 	padding-right: 10px;	
-	display: inline-block;	
+		
 }
 
 .topSectionRight{
@@ -307,35 +378,36 @@ hr{
 	padding-top:10px;
 	padding-bottom: 15px;
 	padding-left: 10px;
-	display: inline-block;	
+		
+}
+
+.botMainSection{
+	display: flex;
 }
 
 .botSectionLeft{
-	width: 33%;
+	width:33%;
 	padding-top:10px;
 	padding-bottom: 15px;
-	display: inline-block;
+	flex: 1 0 auto;
 }
 .botSectionCenter{
-	width: 33%;
+	width:33%;
 	padding-top:10px;
 	padding-left:10px;
 	padding-right:10px;
 	padding-bottom: 15px;
 	margin: auto;
-	display: inline-block;
+	flex: 1 0 auto;
 }
 .botSectionRight{
-	width: 33%;
+	width:33%;
 	padding-top:10px;
 	padding-bottom: 15px;
-	display: inline-block;
+	flex: 1 0 auto;
 }
 
-.testLeft{
-	width: 50%;
-	display: inline-block;
-}
+
 
 .img-center{
 	background-image: url("../img/mid-page-accent.jpg");
@@ -350,16 +422,7 @@ hr{
 	height: 800px;
 }
 
-.spaceHolder{
-	padding: 30px;
-	padding-bottom: 100px;
-	height: 167px;
-}
 
-.blockText{
-	margin-left: auto;
-	margin-right: auto;
-	width: 4em;
-	text-align: center;
-}
+
+
 
