This is the for real last commit for this project, tweeked the menu so will be same across pages, still a slight offset to left or right by a few pixels

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -2,6 +2,10 @@ main{
     
 }
 
+.topNav{
+    margin-top: 10px;
+}
+
 .services-info-img{
     padding-top: 0px;
    
@@ -152,6 +156,8 @@ footer li{
     .flexItem{
         flex: 1;   
     }
+
+    
 
     
 }
