--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -256,7 +256,7 @@ h1, h2, h3, h4, h5 {
 /* END - media queries */
 
 .topnav{
-	
+	min-height: 66px;
 }
 
 .topnav a {
@@ -264,7 +264,7 @@ h1, h2, h3, h4, h5 {
 	text-align: center;
 	text-decoration: none;
 	font-size: 17px;
-	margin-top: 10px;
+	margin-top: 0px;
 }
 
 .topnav a:hover {
